# OpenGothic

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AndroidManifest.xml.in  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  Info.plist.in  LICENSE  README.md  Vam_tutor.chm  appveyor.yml  flake.nix  icon.rc  lgtm.yml
Game/: camera.cpp  camera.h  gamemusic.cpp  gamemusic.h  gothic.cpp  gothic.h  main.cpp  mainwindow.cpp  mainwindow.h  marvin.cpp  marvin.h  resources.cpp  resources.h
Gothic/: Gothic.nsight-gfxproj
android/: .gitignore  build.gradle  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt
debian/: changelog  control  copyright  rules
doc/: vob.md  (+3 more)
lib/edd-dbg/: CMakeLists.txt
lib/edd-dbg/include/dbg/: assert.hpp  config.hpp  debugger.hpp  fatality.hpp  frames.hpp  log.hpp  logstream.hpp  note.hpp  static_assert.hpp  symbols.hpp  symlog.hpp  throw.hpp  unusual.hpp  version.hpp
lib/edd-dbg/include/dbg/impl/: format.hpp  quality_infraction.hpp  raise.hpp
lib/edd-dbg/src/: assert.cpp  envvar.hpp  format.cpp  frames_common.cpp  log.cpp  logstream.cpp  memcpy_cast.hpp  note.cpp  quality_infraction.cpp  spin_mutex.hpp  symlog.cpp  throw.cpp  throw_state.hpp  timestamp.hpp  timestamp_common.cpp  unusual.cpp
lib/edd-dbg/src/osx/: debugger.cpp  envvar.cpp  frames.cpp  symbols.cpp  throw_state.cpp  timestamp.cpp
lib/edd-dbg/src/windows/: dbghelp.cpp  dbghelp.hpp  debugger.cpp  dll.cpp  dll.hpp  envvar.cpp  frames.cpp  ms_symdb.cpp  ms_symdb.hpp  symsink.cpp  throw_state.cpp  timestamp.cpp
lib/edd-dbg/src/windows/mingw/: file.cpp  file.hpp  pe.cpp  pe.hpp  pe_symtab.cpp  pe_symtab.hpp  symbols.cpp
lib/edd-dbg/src/windows/msvc/: symbols.cpp
shader/: CMakeLists.txt  bilateral.frag  common.glsl  compile.bat  copy.comp  copy.frag  copy.vert  copy_img.comp  downscale.frag  fog.frag  hiZ.comp  hiZGather.comp  hiZMip.comp  hiZPot.comp  light.frag  light.vert  link_shaders.cmake  main.frag  main.tesc  main.tese  main.vert  mips.comp  path.comp  scalar_ops.glsl  scene.glsl  shader_common.glsl  shadow_compose.frag  shadow_compose.vert  shadow_resolve.frag  sky.frag  sky_common.glsl  ssao.frag  ssao.vert  ssao_compose.frag  stash.frag  tonemapping.frag  tonemapping.glsl  triangle.vert
shader/antialiasing/: Fxaa3_11.h  fxaa.frag
shader/antialiasing/cmaa2/: cmaa2_common.glsl  compute_dispatch_args.comp  deferred_color_apply_2x2.comp  deferred_color_apply_2x2.frag  deferred_color_apply_2x2.vert  edge_color2x2.comp  process_candidates.comp
shader/bink/: bink.frag
shader/epipolar/: epipolar_common.glsl  fog_epipolar.comp  fog_epipolar_occlusion.comp  fog_shadow_sample.comp
shader/hiz/: hiz_mip.comp  hiz_pot.comp  hiz_reproject.frag  hiz_reproject.mesh
shader/inventory/: item.frag  item.vert
shader/lighting/: ambient_light.frag  direct_light.frag  irradiance.comp  light.frag  light.vert  purkinje_shift.glsl  shadow_resolve.frag  shadow_sampling.glsl  sky_exposure.comp  tonemapping.frag  tonemapping.glsl
shader/lighting/pt/: pathtrace.frag
shader/lighting/rt/: gi_scene_common.glsl  gi_scene_compact.comp  gi_scene_dbg.frag  gi_scene_dbg.vert  gi_scene_update.comp  probe_allocation.comp  probe_ambient.frag  probe_aux.comp  probe_common.glsl  probe_dbg.frag  probe_dbg.vert  probe_hit_dbg.frag  probe_hit_dbg.vert  probe_lighting.comp  probe_trace.comp  rt_common.glsl
shader/lighting/rt_dbg/: rt_dbg.frag
shader/materials/: _main.task  _main.vert  cluster_init.comp  cluster_patch.comp  cluster_task.comp  cluster_vert.vert  gerstner_wave.glsl  main.frag  main.mesh  main.task  main.tesc  main.tese  main.vert  materials_common.glsl  pfx.vert  vertex_process.glsl  visibility_pass.comp
shader/rtsm/: rtsm_bvh_build.comp  rtsm_clear.comp  rtsm_clear_omni.comp  rtsm_common.glsl  rtsm_compact_lights.comp  rtsm_cull_lights.comp  rtsm_culling.comp  rtsm_culling_omni.comp  rtsm_dbg.frag  rtsm_direct_light.frag  rtsm_hiz_pages.comp  rtsm_hraster.comp  rtsm_htiles.comp  rtsm_large_tiles.comp  rtsm_light_prefix.comp  rtsm_light_tiles.comp  rtsm_mark_fog_pages.comp  rtsm_mark_pages.comp  rtsm_meshlet_complex.comp  rtsm_meshlet_cull.comp  rtsm_meshlet_cull_bvh.comp  rtsm_meshlet_omni.comp  rtsm_omni_backface.comp  rtsm_omni_bboxes.comp  rtsm_omni_bboxes.glsl  rtsm_omni_clear.comp  rtsm_omni_compact.comp  rtsm_omni_culling.comp  rtsm_omni_lights.comp  rtsm_omni_meshlet.comp  rtsm_omni_meshlet_cull.comp  rtsm_omni_primitive.comp  rtsm_omni_primitive2.comp  rtsm_omni_primitive_cull.comp  rtsm_omni_raster.comp  rtsm_omni_rendering.comp  rtsm_omni_task.comp  rtsm_position.comp  rtsm_prim_tiles.comp  rtsm_primitive_cull.comp  (+12 more)
shader/shadows/: shadow_mark_pages.comp
shader/sky/: clouds.glsl  clouds_lut.comp  fog.comp  fog.frag  fog_epipolar.frag  fog_rectify.comp  fog_rq.comp  fog_view_lut.comp  shadow_downsample.comp  shadow_rectify.comp  sky.frag  sky.vert  sky_common.glsl  sky_egsr.frag  sky_multi_scattering.frag  sky_nishita.frag  sky_pathtrace.frag  sky_prsr.frag  sky_transmittance.frag  sky_view_clouds_lut.frag  sky_view_lut.frag  sun.frag  sun.vert
shader/software_rendering/: sw_light.comp  sw_rendering_imm.comp  sw_rendering_tbr.comp  vbuffer_blit.frag
shader/ssao/: ssao.comp  ssao_blur.comp  ssao_compose.frag
shader/swrt/: bvh_common.glsl  sw_raytracing.comp  sw_raytracing64.comp  sw_raytracing8.comp
shader/upscale/: lanczos.glsl
shader/virtual_shadow/: epipolar_common.glsl  vsm_alloc_pages.comp  vsm_alloc_pages2.comp  vsm_clear.comp  vsm_clear_omni.comp  vsm_clear_pages.comp  vsm_clump_pages.comp  vsm_cluster_task.comp  vsm_common.glsl  vsm_cull_lights.comp  vsm_direct_light.frag  vsm_fog_epipolar.comp  vsm_fog_sample.comp  vsm_fog_shadow.comp  vsm_fog_trace.comp  vsm_list_pages.comp  vsm_mark_fog_pages.comp  vsm_mark_omni_pages.comp  vsm_mark_pages.comp  vsm_merge_pages.comp  vsm_pack_draws.comp  vsm_postprocess_omni.comp  vsm_rendering.comp  vsm_reproject_sm.frag  vsm_sort_pages.comp  vsm_trim_pages.comp  vsm_visibility_pass.comp
shader/water/: gerstner_wave.glsl  underwater.frag  water_reflection.frag  water_reflection.mesh
(+746 files in other folders)
